# fb

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  app.py  bot.py  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt
compose/facebookbot/: Dockerfile  start
config/: settings.py
docker/caddy/: Caddyfile  docker-compose.yml
locales/: de_DE.json  en_US.json  es_ES.json  ru_RU.json
sanic/: app.py
sanic/locales/: en_US.json  es_ES.json  ru_RU.json
scratches/: audio.json  facebook_message.json  location.json  picture.json  telegram_message.json  text.json  video.json
