[tool.poetry]
name = "corona-fb"
version = "0.1.0"
description = "a facebook bot for corona-cases"
authors = ["oryon-dominik <oryon@cyberise.de>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.12.0"
python-telegram-bot = "^12.6.1"
django-environ = "^0.4.5"
sanic = "^19.12.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
